Fixed z-index on social share.

--- a/scss/_article.scss
+++ b/scss/_article.scss
@@ -472,6 +472,7 @@ $tt-media-margin: 20px;
   border: solid 3px $tt-sand;
   border-radius: 10em !important;
   background-color: $tt-dark-theme-bg;
+  z-index: 9;
 
   .total_shares:before,
   .total_shares span {
