--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -495,7 +495,7 @@ h3 {
 }
 
 .nc_wrapper {
-  z-index: 9 !important;
+  z-index: 9;
 }
 
 .simplebar-track.horizontal {
